--- a/frontend/style/css/style.css
+++ b/frontend/style/css/style.css
@@ -836,6 +836,37 @@ body {
   width: 100%;
 }
 
+#CommandMessage1 {
+  padding: 5px;
+  margin-top: 29px;
+}
+
+#CommandMessage2 {
+  padding: 5px;
+  margin-top: 5px;
+}
+
+#CommandMessage3 {
+  padding: 7px;
+  width: 59%;
+  background-color: black;
+  color: white;
+  margin: auto;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.CommandMessage {
+  font-size: 1em;
+  color: #461212;
+  justify-content: center;
+  display: none;
+}
+
+.displayflex {
+  display: flex !important;
+}
+
 .thanks-icon {
   font-size: 2.8em;
   color: #00944a;
@@ -858,7 +889,7 @@ body {
 }
 
 .thanks-command {
-  padding: 20px;
+  padding: 16px;
   border: 1px solid black;
   color: black;
   margin: auto;
@@ -905,6 +936,23 @@ body {
     padding: 32px 30px 40px;
   }
 }
+#CommandText1 {
+  margin-bottom: 7px;
+}
+
+.thanks-return {
+  width: 100%;
+  height: 61px;
+  border-radius: 30px;
+  background-color: black;
+  color: white !important;
+  font-size: 0.88em;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer-bloc {
   display: flex;
   flex-direction: row;
