--- a/frontend/style/sass/components/_panier.scss
+++ b/frontend/style/sass/components/_panier.scss
@@ -355,3 +355,34 @@
 .wii {
   width: 100%;
 }
+
+#CommandMessage1 {
+  padding: 5px;
+  margin-top: 29px;
+}
+
+#CommandMessage2 {
+  padding: 5px;
+  margin-top: 5px;
+}
+
+#CommandMessage3 {
+  padding: 7px;
+  width: 59%;
+  background-color: black;
+  color: white;
+  margin: auto;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.CommandMessage {
+  font-size: 1em;
+  color: #461212;
+  justify-content: center;
+  display: none;
+}
+
+.displayflex {
+  display: flex !important;
+}
