--- a/frontend/style/sass/components/_thanks.scss
+++ b/frontend/style/sass/components/_thanks.scss
@@ -27,7 +27,7 @@
 }
 
 .thanks-command {
-  padding: 20px;
+  padding: 16px;
   border: 1px solid black;
   color: black;
   margin: auto;
@@ -73,4 +73,21 @@
     margin-bottom: 80px;
     padding: 32px 30px 40px;
   }
+}
+
+#CommandText1 {
+  margin-bottom: 7px;
+}
+
+.thanks-return {
+  width: 100%;
+  height: 61px;
+  border-radius: 30px;
+  background-color: black;
+  color: white !important;
+  font-size: 0.88em;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
